# cdad

./: .gitignore  README.md  pyproject.toml
.github/prompts/: cdad.prompt.md
.github/workflows/: cdad.yml  security.yml
docs/: cdad-tool-plan.md  command-reference.md  first-project-guide.md  quickstart.md  release.md  start-now-guide.md  start-now-guide.toon
docs/snapshots/: 01-help.txt  02-init.txt  03-doctor.txt  04-goal-new.txt  05-goal-validate.txt  06-design-validate.txt  07-packet-new.txt  08-packet-validate.txt  09-next.txt  10-next-json.txt  11-context.txt  12-verification-detect.txt  13-verify.txt  14-progress.txt  15-packet-render.txt  16-trace.txt  17-trace-json.txt  18-coverage.txt  19-benchmark.txt  20-integration-all.txt  21-ci.txt  22-metrics-json.txt  23-trace-json.txt  24-coverage-json.txt  25-artifact-tree.txt
src/cdad_tools/: __init__.py  benchmark.py  cli.py  config.py  context.py  coverage.py  design_validation.py  integrations.py  next.py  project.py  schema.py  toon.py  trace.py  verification.py
tests/: test_cli.py  test_context.py  test_design_validation.py  test_schema.py  test_toon.py
